--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,6 +4,7 @@ description: unoffical v2ex application.
 dependencies:
   http: ^0.11.3+16
   rxdart: ^0.18.1
+  cached_network_image: ^0.4.1+1
   flutter:
     sdk: flutter
 
@@ -28,8 +29,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
+  assets:
+    - asset/default_avatar.png
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
