--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,6 +6,7 @@ dependencies:
   rxdart: ^0.18.1
   cached_network_image: ^0.4.1+1
   flutter_markdown: "^0.2.0"
+  flutter_secure_storage: ^3.1.2
   flutter:
     sdk: flutter
 
